23 February 2008: Wouter
	- delay utility works. Gets decent thoughput too (>20000).

22 February 2008: Wouter
	- +2% for recursions, if identical queries (except for destination
	  and query ID) in the reply list, avoid re-encoding the answer.
	- removed TODO items for optimizations that do not show up in
	  profile reports.
	- default is now minievent - not libevent. As its faster and
	  not needed for regular installs, only for very large port ranges.
	- loop check different speedup pkt-dname-reading, 1% faster for
	  nocache-recursion check.
	- less hashing during msg parse, 4% for recursion.
	- small speed fix for dname_count_size_labels, +1 or +2% recursion.
	- some speed results noted:
	  optimization resulted in +40% for recursion (cache miss) and
	  +70 to +80 for cache hits, and +96% for version.bind.
	  zone nsec3 example, 100 NXDOMAIN queries, NSD 35182.8 Ub 36048.4
	  www.nlnetlabs.nl from cache: BIND 8987.99 Ub 31218.3
	  www with DO bit set : BIND 8269.31 Ub 28735.6 qps.
	  So, unbound can be about equal qps to NSD in cache hits.
	  And about 3.4x faster than BIND in cache performance.
	- delay utility for testing.

21 February 2008: Wouter
	- speedup of root-delegation message encoding by 15%.
	- minor speedup of compress tree_lookup, maybe 1%.
	- speedup of dname_lab_cmp and memlowercmp - the top functions in 
	  profiler output, maybe a couple percent when it matters.

20 February 2008: Wouter
	- setup speec_cache for need-ldns-testns in dotests.
	- check number of queued replies on incoming queries to avoid overload
	  on that account.
	- fptr whitelist checks are not disabled in optimize mode.
	- do-daemonize config file option.
	- minievent time share initializes time at start.
	- updated testdata for nsec3 new algorithm numbers (6, 7).
	- small performance test of packet encoding (root delegation).

19 February 2008: Wouter
	- applied patch to unbound-host man page from Jan-Piet Mens.